# Conqace

./: .env  .env.example  .readthedocs.yaml  README.md  conqace.py  conqace.spec  env  main.py  noxfile.py  pushmerger.py  pyoxidizer.bzl  pyproject.toml  requirements.txt
.github/actions/install-just/: action.yml
.github/actions/rust-bootstrap/: action.yml
.github/workflows/: ci.yml  pin-for-pyoxidizer.yml  pyinstaller.yml  pyoxidizer.yml  pypi.yml  python-app.yml  ruff.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
requirements/: docs.txt  pyoxidizer-darwin.txt  pyoxidizer-linux.txt  pyoxidizer-win32.txt
